cmss/main/default/objects/AccountRelation__c/AccountRelation__c.object-meta.xml
<CustomObject>
    <label>Account Relation</label>
    <nameField>
        <label>Account Relation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>