cmss/main/default/objects/AccountRelation__c/fields/AmendmentNumber__c.field-meta.xml
<CustomField>
    <fullName>AmendmentNumber__c</fullName>
    <label>Amendment Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>