cmss/main/default/objects/AccountRelation__c/fields/AmendmentSignDate__c.field-meta.xml
<CustomField>
    <fullName>AmendmentSignDate__c</fullName>
    <label>Amendment Sign Date</label>
    <type>Date</type>
</CustomField>