cmss/main/default/objects/AccountRelation__c/fields/ClientZoneExternalId__c.field-meta.xml
<CustomField>
    <fullName>ClientZoneExternalId__c</fullName>
    <formula>ClientZoneID__r.ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Zone External Id</label>
    <type>Text</type>
</CustomField>