cmss/main/default/objects/AccountRelation__c/fields/GlobalId__c.field-meta.xml
<CustomField>
    <fullName>GlobalId__c</fullName>
    <description>Global Id of Account__c</description>
    <formula>Account__r.GlobalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Id</label>
    <type>Text</type>
</CustomField>