cmss/main/default/objects/AccountRelation__c/fields/RelatedAccount__c.field-meta.xml
<CustomField>
    <fullName>RelatedAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Navázaná osoba</description>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Relations (Related Account)</relationshipLabel>
    <relationshipName>AccountRelations_Related</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>