cmss/main/default/objects/AccountRelation__c/fields/RelatedAccountRole__c.field-meta.xml
<CustomField>
    <fullName>RelatedAccountRole__c</fullName>
    <label>Related Account Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1501</fullName>
            </value>
            <value>
                <fullName>1502</fullName>
            </value>
            <value>
                <fullName>1503</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>19</fullName>
            </value>
            <value>
                <fullName>32</fullName>
            </value>
            <value>
                <fullName>64</fullName>
            </value>
            <value>
                <fullName>128</fullName>
            </value>
            <value>
                <fullName>256</fullName>
            </value>
            <value>
                <fullName>512</fullName>
            </value>
            <value>
                <fullName>1024</fullName>
            </value>
            <value>
                <fullName>2048</fullName>
            </value>
            <value>
                <fullName>4096</fullName>
            </value>
            <value>
                <fullName>8192</fullName>
            </value>
            <value>
                <fullName>16384</fullName>
            </value>
            <value>
                <fullName>32768</fullName>
            </value>
            <value>
                <fullName>65536</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>