cmss/main/default/objects/AccountRelation__c/fields/RelatedGlobalId__c.field-meta.xml
<CustomField>
    <fullName>RelatedGlobalId__c</fullName>
    <description>Global Id of RelatedAccount</description>
    <formula>RelatedAccount__r.GlobalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Global Id</label>
    <type>Text</type>
</CustomField>