cmss/main/default/objects/AccountRelation__c/fields/RelationType__c.field-meta.xml
<CustomField>
    <fullName>RelationType__c</fullName>
    <description>0	Neurčeno
1	Zastupování nezletilého
2	Zastupování nesvéprávného
3	Plná moc

CIS_UP_TYP_VZTAHU</description>
    <label>Relation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>