cmss/main/default/objects/AccountRelation__c/fields/RelationTypeNEL__c.field-meta.xml
<CustomField>
    <fullName>RelationTypeNEL__c</fullName>
    <label>Relation Type NEL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>