cmss/main/default/objects/AccountRelation__c/fields/SystemId__c.field-meta.xml
<CustomField>
    <fullName>SystemId__c</fullName>
    <description>Zdrojový system</description>
    <label>System Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>