cmss/main/default/objects/AccountRelation__c/fields/ValidFrom__c.field-meta.xml
<CustomField>
    <fullName>ValidFrom__c</fullName>
    <description>Platnost vztahu od</description>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>